# multi-uav-trace-mbzirc-gt

./: .gitignore  .tmux.conf  CMakeLists.txt  README.md  package.xml  tmuxinator.multi-uav-trace-mbzirc-gt.yml
docker/: Dockerfile  build_docker.sh  run_docker.sh
include/Eigen/src/Geometry/: Quaternion.h
include/multi-uav-trace-mbzirc-gt/: Utils.h
launch/: groundtruth_pose.launch.py  spawn.launch.py
src/: pose_bridge.cpp  suav.cpp
